@@ -4,6 +4,9 @@ Revision history for {{$dist->name}}
     - Updated the build to use [@Starter]
     - Placed dependencies in cpanfile
     - Require IO::Socket::SSL now that it's HTTPS only
+    - Require HTML::Entities
+    - No longer require URI
+    - moved live tests to author tests
 
 0.003     2011-04-22
     * Packaging updates
